--- a/css/stylo.css
+++ b/css/stylo.css
@@ -1,10 +1,14 @@
+Body{
+    padding: 30px;
+    background-color: ivory;
+}
+
 img {
     width: 120px;
 }
 
 header{
     text-align: center;
-    background-color:peachpuff;
 }
 
 header>h1 {
@@ -19,8 +23,9 @@ margin-top: 0px;
 }
 
 nav{
-    text-align: right;
+    text-align: left;
     text-size-adjust: 30px;
+    background-color: rgb(255, 164, 202);
 }
 
 nav ul li a {
@@ -28,16 +33,36 @@ nav ul li a {
     color: rgb(255, 255, 255);
     font-size: 20px;
     text-size-adjust: 30px;
+    padding: 30px;
 }
 
 nav>ul>li{
     
     display: inline-block;
-    background-color: palevioletred;
     border-radius: 30px;
-    border:black solid 1px ;
 }
 
 body{
     margin: 200 px;
+}
+
+#perfil{
+    display:inline-block;
+    padding-bottom: 60px;
+}
+
+#TomatePerfil{
+    float: left;
+    padding-right: 30px;
+   
+}
+
+#Stacy{
+    width: 40px;
+    float: left;
+    padding-right: 10px;
+}
+
+p{
+    
 }
