--- a/css/stylo.css
+++ b/css/stylo.css
@@ -63,6 +63,50 @@ body{
     padding-right: 10px;
 }
 
-p{
-    
+#formulario{
+    background-color: yellowgreen;
+    height: 290px;
+    width: 300px;
+    border-radius: 7px;
+    padding-left: 20px;
+    padding-top: 60px;
+    top: 0px;
 }
+
+#nombre{
+    border: 0px;
+    border-radius: 7px;
+}
+
+#edad{
+    border: 0px;
+    border-radius: 7px;
+}
+
+#comentarios{
+    border: 0px;
+    border-radius: 7px;
+}
+
+#hombre{
+    border: 0px;
+}
+
+#mujer{
+    border: 0px;
+}
+
+#tomateForm{
+    width: 80px;
+    inset-block: 453px;
+    position: relative;
+    top: 5em;
+}
+
+button{
+    background-color: yellow;
+    border: 5px black;
+    border-radius: 7px;
+}
+
+button:hover {background-color: #bb9a2e}
